# HFMD_demo_softkinetic

./: .gitignore  CMakeLists.txt  ConsoleDemo.cxx  ConsoleDemo.cxx~  HFMD_demo_DS325  HFMD_softkinect  config.xml  extrinsics.yml  hfConfig.xml  intrinsics.yml  tsukuChalleConfig.xml
src/: CCalibDS325.cpp  CCalibDS325.h  main.cpp
trees/: treetable000.txt  treetable001.txt  treetable002.txt  treetable003.txt  treetable004.txt  treetable005.txt  treetable006.txt  treetable007.txt  treetable008.txt  treetable009.txt  treetable010.txt  treetable011.txt  treetable012.txt  treetable013.txt  treetable014.txt  treetable015.txt  treetable016.txt  treetable017.txt  treetable018.txt  treetable019.txt  treetable020.txt  treetable021.txt  treetable022.txt  treetable023.txt  treetable024.txt  treetable025.txt  treetable026.txt  treetable027.txt  treetable028.txt  treetable029.txt  treetable030.txt  treetable031.txt  treetable032.txt  treetable033.txt  treetable034.txt  treetable035.txt  treetable036.txt  treetable037.txt  treetable038.txt  treetable039.txt  (+64 more)
trees_a/: treetable003.txt  treetable006.txt  treetable009.txt  treetable010.txt  treetable011.txt  treetable013.txt  treetable014.txt  treetable016.txt  treetable017.txt
trees_more_yoi/: treetable000.txt  treetable001.txt  treetable003.txt  treetable004.txt  treetable005.txt  treetable006.txt  treetable012.txt  treetable014.txt  treetable015.txt  treetable016.txt  treetable018.txt
trees_yoi/: treetable000.txt  treetable001.txt  treetable002.txt  treetable004.txt  treetable005.txt  treetable007.txt  treetable008.txt  (+4 more)
